--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,5 +1,5 @@
 <nav id="main_nav">
-  <h1><a href="<%= url_for(root_path) %>"><span>Sites Usage</span></a></h1>
+  <h1><a id="logo" href="<%= url_for(root_path) %>"><span>Sites Usage</span></a></h1>
   <h3><%= image_tag "sublogo_dark.jpg", :title => "Division of IT" %></h3>
   <ul class="menu">
     <%= department_links %>
