--- a/app/views/clients/_client.html.erb
+++ b/app/views/clients/_client.html.erb
@@ -1,8 +1,8 @@
 <tr>
-  <td><%= client.name %></td>
+  <td><%= link_to client.name, logs_path(search_client: client.id), class: 'no-link-color', title: 'View Logs' %></td>
   <td><%= client.client_type.upcase %></td>
   <td><%= client.site.display_name if client.site_id %></td>
-  <td><span class="clickable"><%= best_in_place client, :enabled, :type => :checkbox %></span></td>
+  <td><span class="clickable" title="Change state"><%= best_in_place client, :enabled, :type => :checkbox %></span></td>
   <td><%= client.mac_address %></td>
   <td><%= client.ip_address %></td>
   <td><%= time_ago_in_words(client.last_checkin) + " ago" if client.last_checkin %></td>
