--- a/app/assets/stylesheets/departments.css.scss
+++ b/app/assets/stylesheets/departments.css.scss
@@ -1,155 +1,151 @@
 // Place all the styles related to the Departments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-@mixin rounded-corners($radius) {
-  border-radius: $radius;
-  -moz-border-radius: $radius;
-  -webkit-border-radius: $radius;
-}
-
 .departments {
-	.department_summary {
-		width: 350px;
-		height: 350px;
-		margin: 0 40px 60px 0;
-		position: relative;
-		display: inline-block;
-		text-align: center;
-		
-		.highcharts-tooltip rect {
-			position: absolute;
-		}
-		.status_chart {
-			height: 350px;
-			width: 350px;
-			position: absolute;
-		}
-		.department_data {
-			width: 80%;
-			margin: 105px auto 0;
-			position: relative;
-			.department_title {
-				height: 40px;
-				text-align: center;
-				font-size: 18px;
-				color: #A6D3FD;
-			}
-			.label_row {
-				height: 40px;
-				font-size: 0px;
-				text-align: center;
-				margin: 0 auto;
-				overflow: hidden;
-				.label {
-					display: inline-block;
-					width: 75px;
-					height: 40px;
-					font-size: 20px;
-					font-variant: small-caps;
-					overflow: hidden;
-					line-height: 40px;
-					vertical-align: top;
-				}
-				div.mac_icon, div.windows_icon {
-					display: inline-block;
-					width: 75px;
-					height: 40px;
-				}
-			}
-			.data_row {
-				height: 40px;
-				margin: 0 auto;
-				text-align: center;
-				div {
-					display: inline-block;
-					width: 75px;
-					height: 40px;
-					line-height: 40px;
-					vertical-align: middle;
-					font-size: 26px;
-				}
-			}
-			.admin_row {
-				text-align: center;
-				margin: 10px auto 0px;
-				a {
-					display: inline-block;
-					margin: 0px 3px;
-				}
-			}
-		}
-		.tooltip {
-			text-align: center;
-			visibility: hidden;
-			padding: 5px;
-			position: relative;
-			display: inline-block;
-			color: #FFFFFF;
-			top: 5px;
-			margin-top: 2px;
-			margin-bottom: 2px;
-			@include rounded-corners(5px)
-		}
-		.tooltip_Available {
-			margin-top: 0px;
-			margin-bottom: 0px;
-			border: 2px solid #5BBD5C;
-		}
-		.tooltip_Unavailable {
-			margin-top: 0px;
-			margin-bottom: 0px;
-			border: 2px solid #DBC067;
-		}
-		.tooltip_Offline {
-			margin-top: 0px;
-			margin-bottom: 0px;
-			border: 2px solid #D66781;
-		}
-		.visible {
-			visibility: visible;
-		}
-	}
-	#site_list {
-		margin-top: 40px;
-	}
-	.site_summary {
-		width: 350px;
-		height: 350px;
-		margin: 0 40px 60px 0;
-		display: inline-block;
-		position: relative;
-		
-		.site_title {
-			display: block;
-			text-align: center;
-			font-size: 18px;
-		}
-		.status_chart {
-			height: 350px;
-			width: 350px;
-			position: absolute;
-		}
-	}
-	#type_select {
-		padding: 5px;
-		margin-top: -50px;
-		margin-left: 40px;
-		li {
-			display: inline-block;
-			padding: 3px 30px 3px 0px;
-			a {
-				padding: 3px;
-			}
-			a:hover {
-				text-decoration: none;
-			}
-		}
-		li.current a, li a:hover {
-			border-bottom: 3px solid #FFC736;
-		}
-	}
-	.no_sites {
-		font-size: 16px;
-		margin-bottom: 20px;
-	}
+  .department_summary {
+    width: 350px;
+    height: 350px;
+    margin: 0 40px 60px 0;
+    position: relative;
+    display: inline-block;
+    text-align: center;
+    
+    .highcharts-tooltip rect {
+      position: absolute;
+    }
+    .status_chart {
+      height: 350px;
+      width: 350px;
+      position: absolute;
+    }
+    .department_data {
+      width: 80%;
+      margin: 105px auto 0;
+      position: relative;
+      .department_title {
+        height: 40px;
+        text-align: center;
+        font-size: 24px;
+        color: #A6D3FD;
+        font-family: 'Qlassik';
+      }
+      .label_row {
+        height: 40px;
+        font-size: 0px;
+        text-align: center;
+        margin: 0 auto;
+        overflow: hidden;
+        .label {
+          display: inline-block;
+          width: 75px;
+          height: 40px;
+          font-size: 20px;
+          font-variant: small-caps;
+          overflow: hidden;
+          line-height: 40px;
+          vertical-align: top;
+        }
+        div.mac_icon, div.windows_icon {
+          display: inline-block;
+          width: 75px;
+          height: 40px;
+        }
+      }
+      .data_row {
+        height: 40px;
+        margin: 0 auto;
+        text-align: center;
+        div {
+          display: inline-block;
+          width: 75px;
+          height: 40px;
+          line-height: 40px;
+          vertical-align: middle;
+          font-size: 26px;
+        }
+      }
+      .admin_row {
+        text-align: center;
+        margin: 10px auto 0px;
+        a {
+          display: inline-block;
+          margin: 0px 3px;
+        }
+      }
+    }
+    .tooltip {
+      text-align: center;
+      visibility: hidden;
+      padding: 5px;
+      position: relative;
+      display: inline-block;
+      color: #FFFFFF;
+      top: 5px;
+      margin-top: 2px;
+      margin-bottom: 2px;
+      border-radius: 5px;
+    }
+    .tooltip_Available {
+      margin-top: 0px;
+      margin-bottom: 0px;
+      border: 2px solid #5BBD5C;
+    }
+    .tooltip_Unavailable {
+      margin-top: 0px;
+      margin-bottom: 0px;
+      border: 2px solid #DBC067;
+    }
+    .tooltip_Offline {
+      margin-top: 0px;
+      margin-bottom: 0px;
+      border: 2px solid #D66781;
+    }
+    .visible {
+      visibility: visible;
+    }
+  }
+  #site_list {
+    margin-top: 40px;
+  }
+  .site_summary {
+    width: 350px;
+    height: 350px;
+    margin: 0 40px 60px 0;
+    display: inline-block;
+    position: relative;
+    
+    .site_title {
+      display: block;
+      text-align: center;
+      font-size: 24px;
+      font-family: 'Qlassik';
+    }
+    .status_chart {
+      height: 350px;
+      width: 350px;
+      position: absolute;
+    }
+  }
+  #type_select {
+    padding: 5px;
+    margin-top: -50px;
+    margin-left: 40px;
+    li {
+      display: inline-block;
+      padding: 3px 30px 3px 0px;
+      a {
+        padding: 3px;
+      }
+      a:hover {
+        text-decoration: none;
+      }
+    }
+    li.current a, li a:hover {
+      border-bottom: 3px solid #FFC736;
+    }
+  }
+  .no_sites {
+    font-size: 16px;
+    margin-bottom: 20px;
+  }
 }
