--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -1,11 +1,5 @@
 @import "colors";
 
-@mixin rounded-corners($radius) {
-  border-radius: $radius;
-  -moz-border-radius: $radius;
-  -webkit-border-radius: $radius;
-}
-
 html {
   height: 100%;
 }
@@ -202,16 +196,15 @@ body {
 
 #page_title {
   border-left: 1px solid #A6D3FD;
-  line-height: 30px;
   margin-bottom: 40px;
   padding: 5px 0 5px 20px;
   display: block;
   
   h1 {
     color: $main_gold;
-    letter-spacing: 0.3px;
-    font-size: 20px;
-    font-variant: small-caps;
+    font-size: 42px;
+    font-weight: normal;
+    font-family: 'Qlassik';
   }
 }
 
@@ -219,6 +212,9 @@ a {
   color: #A6D3FD;
   text-decoration: none;
   cursor: pointer;
+  &.no-link-color {
+    color: #FFE090;
+  }
   &:hover {
     text-decoration: underline;
   }
@@ -345,7 +341,7 @@ form {
     min-width: 200px;
     max-width: 500px;
     font-size: 16px;
-    @include rounded-corners(10px)
+    border-radius: 10px;
   }
 }
 
@@ -360,7 +356,7 @@ form {
   right: 20px;
   width: 250px;
   padding: 20px;
-  @include rounded-corners(10px)
+  border-radius: 10px;
 }
 
 .pagination {
