--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -22,7 +22,7 @@
     <% end %>
     <li <%= "class=active" if submenu_link_active? "api" %>><%= link_to "API", api_path %></li>
     <% if signed_in? %>
-      <li><%= link_to "Log Out", logout_path, :method => :delete %></li>
+      <li><%= link_to "Log Out", logout_path, :method => :delete, :remote => true %></li>
     <% else %>
       <li <%= "class=active" if submenu_link_active? "sessions" %>><%= link_to "Log In", login_path %></li>
     <% end %>
