--- a/app/assets/stylesheets/departments.css.scss
+++ b/app/assets/stylesheets/departments.css.scss
@@ -148,4 +148,13 @@
     font-size: 16px;
     margin-bottom: 20px;
   }
+  #new_department, .edit_department {
+    input[type="text"] {
+      background-color: rgba(0,0,0,0.1);
+      box-shadow: 0 1px 0 rgba(255,255,255,0.15), 0 2px 4px rgba(0,0,0,0.2) inset, 0 0 12px rgba(255,255,255,0.1);
+      border: 0;
+      padding: 10px;
+      width: 230px;
+    }
+  }
 }
