--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -5,6 +5,12 @@
   #users_table {
     width: 80%;
     margin-bottom: 20px;
+    tr:nth-child(even) {
+      box-shadow: 0 1px 0 rgba(255,255,255,0.15), 0 2px 4px rgba(0,0,0,0.2) inset, 0 0 12px rgba(255,255,255,0.1);
+      td {
+        -webkit-box-shadow: 0 1px 0 rgba(255,255,255,0.15), 0 2px 4px rgba(0,0,0,0.2) inset, 0 0 12px rgba(255,255,255,0.1);
+      }
+    }
   }
   #roles_explanation_button {
     display: block;
@@ -14,6 +20,15 @@
     font-size: 12px;
     color: #FFD568;
     letter-spacing: 3px;
+  }
+  #new_user, .edit_user {
+    input[type="text"], select {
+      background-color: rgba(0,0,0,0.1);
+      box-shadow: 0 1px 0 rgba(255,255,255,0.15), 0 2px 4px rgba(0,0,0,0.2) inset, 0 0 12px rgba(255,255,255,0.1);
+      border: 0;
+      padding: 10px;
+      width: 230px;
+    }
   }
 }
 #roles_explanation_table {
