Consider nav height in setContentHeight

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-  background: image_url("bg_nav.jpg") repeat-y scroll left top #1D2D44; //rgb(20, 56, 90);
+  background: image_url("bg_nav.jpg") repeat-y scroll left top #1D2D44;
   color: $lightest_gold;
   font-family: "Lucida Sans Unicode","Lucida Grande","Trebuchet MS",Arial,Helvetica,sans-serif;
   font-size: 11px;
